--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity2">
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_graz"
+        android:textColor="@color/green"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -30,13 +31,4 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.623" />
-
-    <Button
-        android:id="@+id/changeColorButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="green"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="514dp" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
